--- a/README.html
+++ b/README.html
@@ -274,7 +274,7 @@ div.tocify {
 <thead>
 <tr class="header">
 <th>Wed 5 Dec</th>
-<th><a href="https://goo.gl/maps/zZ2NDx6zKYm">Schellingstr. 3</a> (Munich centre, near Geschwister-Scholl-Platz), lecture hall S005</th>
+<th><a href="https://goo.gl/maps/zZ2NDx6zKYm">Schellingstr. 3</a> (Munich centre, near Geschwister-Scholl-Platz), <a href="%22./docs/assets/MapSchellingstrasse3STRATOSTalk.pdf%22">lecture hall S005</a></th>
 </tr>
 </thead>
 <tbody>
