--- a/README.html
+++ b/README.html
@@ -274,7 +274,7 @@ div.tocify {
 <thead>
 <tr class="header">
 <th>Wed 5 Dec</th>
-<th><a href="https://goo.gl/maps/zZ2NDx6zKYm">Schellingstr. 3</a> (Munich centre, near Geschwister-Scholl-Platz), <a href="%22./docs/assets/MapSchellingstrasse3STRATOSTalk.pdf%22">lecture hall S005</a></th>
+<th><a href="https://goo.gl/maps/zZ2NDx6zKYm">Schellingstr. 3</a> (Munich centre, near Geschwister-Scholl-Platz), <a href="/s/public_webshare/project/EuroBioc2018/MapSchellingstrasse3STRATOSTalk.pdf">lecture hall S005</a></th>
 </tr>
 </thead>
 <tbody>
@@ -415,7 +415,7 @@ div.tocify {
 </div>
 <div id="getting-to-the-venue" class="section level2">
 <h2>Getting to the venue</h2>
-<p>By public transport (U-Bahn), the venue can be reached in approximately 30 minutes from the city centre. You need to get off at the last stop of the U6 Line (Garching-Forschungzentrum).</p>
+<p>By public transport (U-Bahn), the venue can be reached in approximately 30 minutes from the city centre. You need to get off at the last stop of the U6 Line (Garching-Forschungszentrum).</p>
 <p>More information is available here</p>
 <ul>
 <li><a href="https://www.mvv-muenchen.de/en/tickets-and-fares/tickets-daytickets/single-day-ticket/index.html">Ticket prices</a>. Garching-Forschungzentrum is on the green zone therefore you will need to buy the Munich XXL ticket (8,90 EUR for a single-day ticket).</li>
