--- a/README.html
+++ b/README.html
@@ -274,7 +274,7 @@ div.tocify {
 <thead>
 <tr class="header">
 <th>Wed 5 Dec</th>
-<th><a href="https://goo.gl/maps/zZ2NDx6zKYm">Schellingstr. 3</a> (Munich centre, near Geschwister-Scholl-Platz), <a href="/s/public_webshare/project/EuroBioc2018/MapSchellingstrasse3STRATOSTalk.pdf">lecture hall S005</a></th>
+<th><a href="https://goo.gl/maps/zZ2NDx6zKYm">Schellingstr. 3</a> (Munich centre, near Geschwister-Scholl-Platz), <a href="https://i12g-gagneurweb.in.tum.de/project/EuroBioc2018/MapSchellingstrasse3STRATOSTalk.pdf">lecture hall S005</a></th>
 </tr>
 </thead>
 <tbody>
