--- a/README.html
+++ b/README.html
@@ -266,10 +266,10 @@ div.tocify {
 <div id="preliminary-schedule" class="section level2">
 <h2>Preliminary schedule</h2>
 <p><strong>Joint meeting with the <a href="http://stratos-initiative.org">STRATOS</a> topic group 9 “high-dimensional data”</strong></p>
-<table style="width:69%;">
+<table style="width:94%;">
 <colgroup>
 <col width="22%"></col>
-<col width="47%"></col>
+<col width="72%"></col>
 </colgroup>
 <thead>
 <tr class="header">
@@ -293,7 +293,11 @@ div.tocify {
 </tbody>
 </table>
 <p><strong>EuroBioc 2018</strong></p>
-<table>
+<table style="width:94%;">
+<colgroup>
+<col width="22%"></col>
+<col width="72%"></col>
+</colgroup>
 <thead>
 <tr class="header">
 <th>Thu 6 Dec</th>
@@ -303,7 +307,7 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td>09:00 - 09:15</td>
-<td>Registration</td>
+<td><strong>Registration</strong></td>
 </tr>
 <tr class="even">
 <td>09:15 - 09:30</td>
@@ -315,50 +319,118 @@ div.tocify {
 </tr>
 <tr class="even">
 <td>10:00 - 10:30</td>
-<td>Session I</td>
+<td><strong>Session I</strong></td>
+</tr>
+<tr class="odd">
+<td>10:00 - 10:15</td>
+<td>Lukas Weber: HDCytoData package: High-dimensional cytometry benchmark datasets in Bioconductor formats</td>
+</tr>
+<tr class="even">
+<td>10:15 - 10:30</td>
+<td>Elena Landoni: Normalization and batch correction effects on class comparison analysis with high throughput data: a simulation study</td>
 </tr>
 <tr class="odd">
 <td>10:30 - 11:00</td>
 <td>Coffee break</td>
 </tr>
 <tr class="even">
-<td>11:00 - 12:30</td>
-<td>Session II</td>
+<td>11:00 - 12:15</td>
+<td><strong>Session II - Visualization</strong></td>
 </tr>
 <tr class="odd">
-<td>12:30 - 13:30</td>
-<td>Lunch</td>
+<td>11:00 - 11:15</td>
+<td>Nemanja Vucic: Using R/Shiny implementation of Bioconductor packages on the Cancer Genomic Cloud platform</td>
 </tr>
 <tr class="even">
+<td>11:15 - 11:30</td>
+<td>Federico Marini: iSEE: data exploration made easy &amp; reproducible</td>
+</tr>
+<tr class="odd">
+<td>11:30 - 11:45</td>
+<td>Svetlana Ovchinnikova: R/LinkedCharts: A novel approach for simple but powerful interactive data analysis</td>
+</tr>
+<tr class="even">
+<td>11:45 - 12:00</td>
+<td>Lisa Breckels: Interactive visualisation of spatial proteomics data</td>
+</tr>
+<tr class="odd">
+<td>12:00 - 12:15</td>
+<td>Phil Cheng: TCGA Browser</td>
+</tr>
+<tr class="even">
+<td>12:15 - 13:30</td>
+<td>Lunch</td>
+</tr>
+<tr class="odd">
 <td>13:30 - 14:00</td>
 <td><a href="https://www.roswellpark.org/martin-morgan">Martin Morgan</a> Update from the Bioconductor core team</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>14:00 - 15:00</td>
-<td>Session III</td>
+<td><strong>Session III - Epigenomics</strong></td>
+</tr>
+<tr class="odd">
+<td>14:00 - 14:15</td>
+<td>Shijie Zheng: Identification of differentially methylated cell-types in Epigenome-Wide Association Studies</td>
 </tr>
 <tr class="even">
-<td>15:00 - 15:30</td>
+<td>14:15 - 14:30</td>
+<td>Jonas Ibn-Salem: sevenC: Computational Chromosome Conformation Capture by Correlation of ChIP-seq at CTCF motifs</td>
+</tr>
+<tr class="odd">
+<td>14:30 - 14:45</td>
+<td>Markus List: Analysing large-scale epigenomic data with DeepBlue</td>
+</tr>
+<tr class="even">
+<td>14:45 - 15:00</td>
+<td>Yadollah Shahryary Dizaji MethylStar: An efficient and flexible pipeline for population-level analysis of Whole Genome Bisulfite Sequencing (WGBS) data</td>
+</tr>
+<tr class="odd">
+<td>15:00 - 15:15</td>
+<td>Alexander Gosdschan: methylKit, a package for DNA methylation analysis from high-throughput bisulfite sequencing data</td>
+</tr>
+<tr class="even">
+<td>15:15 - 15:45</td>
 <td>Coffee break</td>
 </tr>
 <tr class="odd">
-<td>15:30 - 17:00</td>
-<td>Session IV</td>
+<td>15:45 - 17:00</td>
+<td><strong>Session IV - Proteomics</strong></td>
 </tr>
 <tr class="even">
+<td>15:45 - 16:00</td>
+<td>Christian Panse: rawDiag: access orbitrap data on the fast lane</td>
+</tr>
+<tr class="odd">
+<td>16:00 - 16:15</td>
+<td>Nils Kurzawa: TPP: a Bioconductor package for analysis of thermal proteome profiling experiments</td>
+</tr>
+<tr class="even">
+<td>16:15 - 16:30</td>
+<td>Markus Gruber: MS-EmpiRe - Mass Spectrometry analysis using Empirical and Replicate based statistics</td>
+</tr>
+<tr class="odd">
+<td>16:30 - 16:45</td>
+<td>Helena Crowell: Differential discovery in CyTOF data with CATALYST &amp; diffcyt</td>
+</tr>
+<tr class="even">
+<td>16:45 - 17:00</td>
+<td>Constantin Ahlmann-Eltze: Empirical Bayesian Modeling for Mass Spectrometry Data</td>
+</tr>
+<tr class="odd">
 <td>18:00 - 19:00</td>
 <td>Christmas market</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>19:30 -</td>
 <td>Dinner at Hofbrauhaus (self-funded)</td>
 </tr>
 </tbody>
 </table>
-<table style="width:69%;">
+<table style="width:94%;">
 <colgroup>
 <col width="22%"></col>
-<col width="47%"></col>
+<col width="72%"></col>
 </colgroup>
 <thead>
 <tr class="header">
@@ -372,19 +444,51 @@ div.tocify {
 <td><a href="http://kkorthauer.org">Keegan Korthauer</a> Practical recommendations for controlling false discoveries in computational biology</td>
 </tr>
 <tr class="even">
-<td>09:30 - 10:30</td>
-<td>Session V</td>
+<td>09:30 - 10:15</td>
+<td><strong>Session V</strong></td>
 </tr>
 <tr class="odd">
-<td>10:30 - 11:00</td>
-<td>Coffee break</td>
+<td>09:30 - 09:45</td>
+<td>Ruizhu Huang: The tree aggregation</td>
 </tr>
 <tr class="even">
-<td>11:00 - 12:30</td>
-<td>Session VI</td>
+<td>09:45 - 10:00</td>
+<td>Thomas Girke: signatureSearch: Gene Expression Signature Search Methods for Discovering Novel Modes of Action of Drugs and Other Cellular Perturbations</td>
 </tr>
 <tr class="odd">
-<td>12:30 - 13:30</td>
+<td>10:00 - 10:15</td>
+<td>Ludwig Geistlinger : Towards a gold standard for benchmarking gene set enrichment analysis</td>
+</tr>
+<tr class="even">
+<td>10:15 - 10:45</td>
+<td>Coffee break</td>
+</tr>
+<tr class="odd">
+<td>10:45 - 12:00</td>
+<td><strong>Session VI - Multiomics</strong></td>
+</tr>
+<tr class="even">
+<td>10:45 - 11:00</td>
+<td>Vince Carey: Hybrid data architectures for multiomic experiments</td>
+</tr>
+<tr class="odd">
+<td>11:00 - 11:15</td>
+<td>Johannes Rainer: ensembldb: coordinate mapping between the genome, exome, transcriptome and proteome</td>
+</tr>
+<tr class="even">
+<td>11:15 - 11:30</td>
+<td>Laurent Gatto: A Grammar of Omics Data Manipulation</td>
+</tr>
+<tr class="odd">
+<td>11:30 - 11:45</td>
+<td>Leo Lahti: A roadmap for microbiome bioinformatics in R</td>
+</tr>
+<tr class="even">
+<td>11:45 - 12:00</td>
+<td>Katarzyna Wreczycka: Genomation: a toolkit to summarize, annotate and visualize genomic intervals</td>
+</tr>
+<tr class="odd">
+<td>12:00 - 13:30</td>
 <td>Lunch</td>
 </tr>
 <tr class="even">
@@ -392,16 +496,36 @@ div.tocify {
 <td><a href="https://www.wholebiome.com/team.html#fanny-perraudeau">Fanny Perraudeau</a> Unlocking RNA-seq tools for zero-inflation and single cell applications using ZINB-WaVE observation weights</td>
 </tr>
 <tr class="odd">
-<td>14:00 - 15:00</td>
-<td>Session VII</td>
+<td>14:00 - 15:30</td>
+<td><strong>Session VII - RNA</strong></td>
 </tr>
 <tr class="even">
-<td>15:00 - 15:30</td>
-<td>Coffee break</td>
+<td>14:00 - 14:15</td>
+<td>Clara Benoit-Pilven: kissDE retrieves condition-specific variants in RNA-Seq data from model and non-model species</td>
 </tr>
 <tr class="odd">
-<td>15:30 - 16:00</td>
-<td>Wrap-up and closing</td>
+<td>14:15 - 14:30</td>
+<td>Charlotte Soneson: A junction coverage compatibility score to quantify the reliability of transcript abundance estimates and annotation catalogs</td>
+</tr>
+<tr class="even">
+<td>14:30 - 14:45</td>
+<td>Christian Mertes: OUTRIDER: A statistical method for detecting aberrantly expressed genes in RNA sequencing data</td>
+</tr>
+<tr class="odd">
+<td>14:45 - 15:00</td>
+<td>Svetozar Nesic: Targeted synthetic datasets to benchmark allele specific expression algorithms</td>
+</tr>
+<tr class="even">
+<td>15:00 - 15:15</td>
+<td>Marijke Van Moerbeke: A Random Effects Model for the Identification of Differential Splicing (REIDS) Using Exon and HTA Arrays</td>
+</tr>
+<tr class="odd">
+<td>15:15 - 15:30</td>
+<td>TBD</td>
+</tr>
+<tr class="even">
+<td>15:30 - 15:35</td>
+<td><strong>Wrap-up and closing</strong></td>
 </tr>
 </tbody>
 </table>
